# mediaplayer_qt

./: README.md
media_app/: CMakeLists.txt  imageviewer.cpp  imageviewer.h  main.cpp  videoplayer.cpp  videoplayer.h  windowframe.cpp  windowframe.h
media_app_ros/: CMakeLists.txt  package.xml
media_app_ros/msg/: MsgAuroraStatus.msg
media_app_ros/src/: imagewidget.cpp  imagewidget.h  main.cpp  mainwindow.cpp  mainwindow.h  qrobot.cpp  qrobot.h  qros.cpp  qros.h  videowidget.cpp  videowidget.h
