<?xml version="1.0"?>
<package>
  <name>media_app_ros</name>
  <version>0.0.0</version>
  <description>The media_app package</description>
  <maintainer email="felix@todo.todo">felix</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <export>
    <!-- -->
  </export>
</package>
